Bug 499513 - Automatic lists for AdBlocK don't work/dead links
Summary: Automatic lists for AdBlocK don't work/dead links
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: FreeBSD Ports FreeBSD
: NOR minor
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-02-04 18:11 UTC by Developer2704
Modified: 2025-02-23 10:39 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Developer2704 2025-02-04 18:11:16 UTC
SUMMARY
The AdBlocK lists do not work, and the links appear to be dead, for example some of them redirect to youtube videos or 404 errors. I would expect these links (and Adblock) to work, so I am stuck with using hosty, which also blocks some useful links too.


STEPS TO REPRODUCE
1. Check the automatic AdBlocK filters in.
2. Restart Konqueror
3. Absoutely nothing happens

OBSERVED RESULT


EXPECTED RESULT
Ads would be blocked and the links would not be dead


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: 
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2025-02-16 16:34:35 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/konqueror/-/merge_requests/398
Comment 2 Stefano Crocco 2025-02-23 10:39:06 UTC
Git commit 99f11157eacef6532336d91588722a7d952fb2a1 by Stefano Crocco.
Committed on 23/02/2025 at 10:33.
Pushed by stefanocrocco into branch 'master'.

Update filter list and improve handling of automatic filters

The filter list used to be installed by KHTML, which isn't used anymore,
so use another file for it. Also, ensure that changes in the default
configuration file are shown to the user

M  +40   -30   settings/konqhtml/filteropts.cpp
M  +35   -2    settings/konqhtml/filteropts.h
M  +1    -0    src/CMakeLists.txt
A  +180  -0    src/konqautofiltersrc
M  +62   -50   webenginepart/src/settings/webenginesettings.cpp
M  +15   -0    webenginepart/src/settings/webenginesettings.h

https://invent.kde.org/network/konqueror/-/commit/99f11157eacef6532336d91588722a7d952fb2a1