Update filter list and improve handling of automatic filters

The filter list used to be installed by KHTML, which isn't used anymore,
so use another file for it. Also, ensure that changes in the default
configuration file are shown to the user

BUG: 499513